@@ -12,6 +12,9 @@ set query [ns_db 0or1row $db "GET key1"]
 set result [ns_set value $query 0]
 ns_log Debug GET: $result
 
+# Delete one record
+ns_db exec $db "DEL key1"
+
 # Retrieve all records
 set result ""
 set query [ns_db select $db "CURSOR"]
@@ -24,7 +27,4 @@ while { [ns_db getrow $db $query] } {
 }
 ns_log Debug CURSOR: $result
 
-# Delete one record
-ns_db exec $db "BEGIN"
-ns_db exec $db "DEL key1"
-ns_db exec $db "COMMIT"
+ns_db releasehandle $db
